<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/relativeLayout1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/official_exam_light_green">
	
	<ImageButton
		android:layout_width="187dp"
        android:layout_height="140dp"
        android:layout_below="@+id/questionWrapperRelativeLayout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/icon"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:id="@+id/questionImageButton" />
	
    <RelativeLayout
    	android:layout_height="wrap_content"
    	android:id="@+id/questionWrapperRelativeLayout"
    	android:layout_width="fill_parent">
    	
        <TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:minHeight="50dp"
        	android:id="@+id/questionTextView"
        	android:text="TextView TextView TextView"
        	android:textColor="@android:color/black"
        	android:textStyle="bold"
        	android:layout_marginTop="5dp"
        	android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
        	android:layout_alignParentTop="true"
        	android:layout_alignParentLeft="true" />
        
        <CheckBox
            android:id="@+id/markedQuestionCheckBox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:button="@drawable/marked_question"
            android:text=""
            android:visibility="gone" />
    	
    </RelativeLayout>
    
    <ImageView
        android:id="@+id/questionWrapperBottomImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionWrapperRelativeLayout"
        android:src="@drawable/bg_frage_ohne_pfeil"
        android:visibility="gone" />
	
	<ImageView
	    android:id="@+id/questionMacotImageView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_marginBottom="10dp"
	    android:src="@drawable/mascot"
	    android:visibility="gone" />
        
	<LinearLayout
		android:id="@+id/questionAnswerWrapper"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:orientation="vertical"
        android:layout_below="@+id/questionWrapperRelativeLayout"
        android:layout_toRightOf="@+id/questionImageButton">
        
	    <TextView 
	        android:id="@+id/questionPrefixTextView"
	        android:text="Prefix ..."
	        android:textColor="@android:color/black"
        	android:textStyle="bold"
	        android:layout_width="fill_parent"
        	android:layout_height="wrap_content" />
        
		<LinearLayout
			android:id="@+id/questionAnswerCheckBoxWrapper"
			android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        
	        <RelativeLayout
	        	android:layout_width="fill_parent"
	        	android:layout_height="wrap_content">
	        
	        	<CheckBox
					android:text="CheckBox"
					android:textSize="12sp"
					android:textStyle="bold"
					android:textColor="@android:color/black"
					android:paddingRight="5dp"
					android:button="@drawable/btn_check"
					android:id="@+id/questionAnswerCheckBox1"
					android:minHeight="42dp"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" />
	        
	        </RelativeLayout>
	        
	        <RelativeLayout
	        	android:layout_width="fill_parent"
	        	android:layout_height="wrap_content">
	        
	        	<CheckBox
					android:text="CheckBox"
					android:textSize="12sp"
					android:textStyle="bold"
					android:textColor="@android:color/black"
					android:paddingRight="5dp"
					android:button="@drawable/btn_check"
					android:id="@+id/questionAnswerCheckBox2"
					android:minHeight="42dp"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" />
	        
	        </RelativeLayout>
	        
	        <RelativeLayout
	            android:id="@+id/questionAnswerLinearLayoutWrapper"
	        	android:layout_width="fill_parent"
	        	android:layout_height="wrap_content">
	        
	        	<CheckBox
					android:text="CheckBox"
					android:textSize="12sp"
					android:textStyle="bold"
					android:textColor="@android:color/black"
					android:paddingRight="5dp"
					android:button="@drawable/btn_check"
					android:id="@+id/questionAnswerCheckBox3"
					android:minHeight="42dp"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" />
	        
	        </RelativeLayout>
	        
		</LinearLayout>
		
		<LinearLayout 
			android:id="@+id/questionNumberAnswerWrapper"
			android:layout_width="fill_parent"
	        android:layout_height="134dp"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:visibility="gone">
	        
			<TextView
				android:text="TextView"
				android:textColor="@android:color/black"
				android:textStyle="bold"
				android:textSize="14sp"
				android:id="@+id/questionNumberAnswerTextView"
				android:layout_marginBottom="8dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			
			<LinearLayout
				android:id="@+id/questionNumberAnswerEditTextWrapper"
				android:orientation="horizontal"
				android:gravity="center"
				android:layout_width="fill_parent"
	        	android:layout_height="wrap_content">
	        	
	        	<TextView
					android:text="X  ="
					android:textColor="@android:color/black"
					android:textStyle="bold"
					android:textSize="14sp"
					android:layout_marginRight="8dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
	        	
	        	<EditText
		        	android:id="@+id/questionNumberEditText"
		        	android:layout_width="100dp"
		        	android:layout_height="wrap_content"
		        	android:inputType="numberDecimal" />
		        	
		        <ImageView 
		        	android:id="@+id/questionNumberImageView"
		        	android:src="@drawable/icon_richtig"
		        	android:visibility="invisible"
		        	android:layout_marginLeft="8dp"
		        	android:layout_height="wrap_content"
		        	android:layout_width="wrap_content" />
	        	
	        </LinearLayout>
	        
			<LinearLayout
				android:id="@+id/questionNumberAnswerEditTextWrapper2"
				android:orientation="horizontal"
				android:gravity="center"
				android:visibility="gone"
				android:layout_width="fill_parent"
	        	android:layout_height="wrap_content">
	        	
	        	<TextView
					android:text="Y  ="
					android:textColor="@android:color/black"
					android:textStyle="bold"
					android:textSize="14sp"
					android:layout_marginRight="8dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
	        	
	        	<EditText
		        	android:id="@+id/questionNumberEditText2"
		        	android:layout_width="100dp"
		        	android:layout_height="wrap_content"
		        	android:inputType="numberDecimal" />
		        	
		        <ImageView 
		        	android:id="@+id/questionNumberImageView2"
		        	android:src="@drawable/icon_richtig"
		        	android:visibility="invisible"
		        	android:layout_marginLeft="8dp"
		        	android:layout_height="wrap_content"
		        	android:layout_width="wrap_content" />
	        	
	        </LinearLayout>
	        
		</LinearLayout>
	
	</LinearLayout>

	<LinearLayout
	    android:id="@+id/questionsLeftLinearLayout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="27dp"
	    android:layout_marginBottom="10dp"
	    android:layout_alignParentBottom="true"
	    android:gravity="center_vertical">

		<ImageView
		    android:id="@+id/imageView1"
		    android:layout_width="16dp"
		    android:layout_height="16dp"
		    android:scaleType="fitXY"
		    android:src="@drawable/error" />

		<TextView
		    android:id="@+id/questionsLeftTextView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="4dp"
		    android:text="@string/questions_left"
		    android:textColor="@android:color/black"
		    android:textSize="12sp" />

	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="27dp"
	    android:layout_marginBottom="10dp"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentRight="true"
	    android:gravity="center_vertical">

		<Button
		    android:id="@+id/handInButton"
		    android:onClick="solutionButtonClick"
		    android:layout_width="80dp"
		    android:layout_height="33dp"
		    android:background="@drawable/btn_red_gradient"
		    android:layout_marginRight="8dp"
		    android:textColor="@android:color/white"
		    android:text="@string/official_hand_in" />
		
		<Button
		    android:id="@+id/tagQuestionButton"
		    android:onClick="tagOfficialExamQuestion"
		    android:layout_width="102dp"
		    android:layout_height="33dp"
		    android:background="@drawable/btn_yellow_gradient"
		    android:layout_marginRight="8dp"
		    android:textColor="@android:color/black"
		    android:text="@string/official_tag" />
		
		<Button
		    android:id="@+id/nextQuestionButton"
		    android:onClick="changeQuestion"
		    android:layout_width="72dp"
		    android:layout_height="33dp"
		    android:background="@drawable/btn_green_gradient"
		    android:layout_marginRight="8dp"
		    android:textColor="@android:color/white"
		    android:text="@string/official_next" />
		
		<Button
		    android:id="@+id/showQuestionsOverviewButton"
		    android:onClick="toggleQuestionOverview"
		    android:layout_width="29dp"
		    android:layout_height="33dp"
		    android:background="@drawable/btn_pfeil"
		    android:layout_marginRight="8dp" />
	
	</LinearLayout>
	
</RelativeLayout>